Fix: scroll width jiggle on mobile 4

--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -40,7 +40,7 @@
       span {
         background: var(--accent-clr);
         color: var(--color-secondary-text);
-        margin-right: var(--spacer);
+        //margin-right: var(--spacer);
         padding: var(--spacer-sm);
         border-radius: var(--br);
         font-size: var(--fs-5);
